--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: DeepEXI Team Blog
+title: 💧DeepEXI Team Blog
 subtitle:
 description:
 keywords: deepexi
